# goti

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  VERCEL.md  ZEABUR.md  docker-compose.yml  zeabur.toml
api/: Dockerfile  Dockerfile.afserver  alembic.ini  auth.py  config.py  contracts.py  db.py  llm.py  main.py  memory_store.py  models.py  notifications.py  pyproject.toml  rate_limit.py  requirements.txt  settings.py
api/agents/: _af_app.py  analyzer.py  clarifier.py  classifier.py  coordinator.py  negotiator.py  picker.py  valuation.py
api/alembic/: env.py
api/db/: base.py  models.py
api/integrations/: __init__.py  discovery.py
api/migrations/: env.py
api/mocks/: __init__.py  actionbook.py  discovery.py
api/orchestration/: __init__.py  agents_client.py  analyzer.py  hunts.py  jobs.py  sse.py  tasks.py
api/routes/: adapter.py  agent_bridge.py  approvals.py  goals.py  health.py  hunts.py  inbox.py  integrations.py  jobs.py  me.py  memory.py  notifications.py  tasks.py
api/tests/: conftest.py  test_account.py  test_actionbook_mock.py  test_activity_backfill.py  test_activity_sse_emission.py  test_adapter_real.py  test_agent_bridge.py  test_agents_client.py  test_analyzer.py  test_async_tasks_persist.py  test_async_tasks_registry.py  test_auth.py  test_browser_agent.py  test_browserbase.py  test_case_delete.py  test_case_notes.py  test_classifier_reasoner.py  test_close_deal_and_batna.py  test_discovery_live.py  test_discovery_mock.py  test_finalize_close.py  test_inbox.py  (+4 more)
(+165 files in other folders)
